<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color2"
    android:theme="@android:style/Theme.Material.NoActionBar"
    tools:context=".ThirdActivity">

    <ImageButton
        android:id="@+id/messageboard_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/prikbord_icon"
        android:text="@string/prikbord_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_thought" />

    <ImageButton
        android:id="@+id/teacher_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/classroom_Button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/leerkracht_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_messageboard"
        app:srcCompat="@mipmap/ic_owl" />

    <ImageButton
        android:id="@+id/classroom_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/klaslokaal_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_teacher"
        app:srcCompat="@mipmap/ic_back2school" />

    <TextView
        android:id="@+id/textView_messageboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/prikbord_text"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/messageboard_Button"
        app:layout_constraintStart_toStartOf="@+id/messageboard_Button"
        app:layout_constraintTop_toBottomOf="@+id/messageboard_Button" />

    <TextView
        android:id="@+id/textView_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/leerkracht_text"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/teacher_Button"
        app:layout_constraintStart_toStartOf="@+id/teacher_Button"
        app:layout_constraintTop_toBottomOf="@+id/teacher_Button" />

    <TextView
        android:id="@+id/textView_classroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/klaslokaal_text"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/classroom_Button"
        app:layout_constraintStart_toStartOf="@+id/classroom_Button"
        app:layout_constraintTop_toBottomOf="@+id/classroom_Button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="74dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:src="@drawable/ic_action_settings"
        app:layout_constraintEnd_toStartOf="@+id/messageboard_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>