<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/colorful"
    android:theme="@style/Theme.Design.NoActionBar">

    <Button
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_marginBottom="44dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="158dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="158dp"
        android:padding="10dp"
        android:fontFamily="cursive"
        android:shadowColor="@color/colorPrimaryDark"
        style="@android:style/Widget.Holo.Button"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_above="@+id/button2"/>

    <Button
        android:text="@string/registreren_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/button2"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:fontFamily="cursive"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/ic_pensils"
        android:layout_alignParentTop="true"
        android:id="@+id/imageView"
        android:layout_marginTop="68dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="147dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="147dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="475dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:id="@+id/editText1"
        android:layout_marginTop="290dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="324dp"
        android:fontFamily="cursive"
        android:textSize="24sp"
        android:textColor="@color/textBackground"
        android:hint="@string/email_gebruikersnaam_text"
        android:textStyle="bold"
        android:layout_alignStart="@+id/editText2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/editText2"
        android:layout_marginBottom="240dp"
        android:hint="@string/wachtwoord_text"
        android:fontFamily="cursive"
        android:textSize="24sp"
        android:textColor="@color/textBackground"
        android:textStyle="bold"/>
</RelativeLayout>